# faas-inference-rust

./: README.md
ansible/: ansible-playbook.yml  inventory
ansible/data/: .bashrc  .inputrc
ansible/roles/setup/tasks/: main.yml
src/: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile.container  Dockerfile.wasm  Dockerfile.wasm.no-aot  Makefile  densenet201.tflite
src/microvm/: firecracker-containerd.patch
src/native/: Cargo.toml
src/native/src/: imagenet_classes.rs  main.rs
src/unikernel/: Containerfile  Kraftfile  fc.json  kernel
src/wasm/: Cargo.toml  inference.wasm
src/wasm/src/: main.rs
