[package]
name = "wasm-inference"
version = "0.1.0"
authors = ["Ruslan Potekhin"]
readme = "README.md"

[dependencies]
image = { version = "0.23.14", default-features = false, features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld"]  }
wasi-nn = "0.4.0"
serde_json = "1.0.115"

[workspace]
